--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -27,7 +27,7 @@
 <div class="box">
 <div id="descr">
 <span style="float:right;" class="<%= @cardbill.mismatch?(:transdate) %>">
-  <%= Cardbill.human_attribute_name('transdate') %> : <%=h @cardbill.transdate.strftime("%Y.%m.%d %H:%M:%S %p") %>
+  <%= Cardbill.human_attribute_name('transdate') %> : <%=h @cardbill.transdate.strftime("%Y.%m.%d %H:%M:%S %p") rescue "" %>
 </span>
 <h3><%= Cardbill.human_attribute_name('totalamount') %>:<%= number_to_currency @cardbill.totalamount %></h3>
 
