--- a/app/views/contacts/form/_phone_number.html.slim
+++ b/app/views/contacts/form/_phone_number.html.slim
@@ -9,7 +9,7 @@ h3 전화번호
       = link_to "새로운 대상 만들기", [:new, :contact_phone_number_tag]
     p
       = phone_number_field.label :number
-      = phone_number_field.text_field :number
+      = phone_number_field.telephone_field :number
 = link_to "새로운 전화번호 작성", "", {class: 'new-phone-number-form new-form-link'}
 
 br
