--- a/app/views/used_vacations/_form.html.slim
+++ b/app/views/used_vacations/_form.html.slim
@@ -14,7 +14,7 @@ h2= t("common.title.#{action_name}")
       = f.date_select :to, :order => [:year, :month, :day], :default => Time.zone.now + 1.day
     p
       = f.label :period
-      = f.text_field :period
+      = f.number_field :period, min: 0, max: 10, step: 0.5
       br
       = t("used_vacations.period_help")
     p
