change mmain menu to adapt responsiveness

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag 'mint_logo.png' %>
 </div>
 
-<%= render partial: "main_menu" %>
+<%= render partial: "main_menu2" %>
 
 
-<%= render partial: "this_week" %>
+<!--%= render partial: "this_week" %-->
