--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,9 +1,10 @@
 #logo{
-  text-align: center;
+  /*text-align: center;*/
 
   img {
     margin-left: 10px;
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
 
