--- a/app/views/card_used_sources/_list.html.slim
+++ b/app/views/card_used_sources/_list.html.slim
@@ -22,8 +22,8 @@ table#list-table
       td= source.card_holder_name
       td= source.used_area
       td= source.approve_no
-      td= source.approved_at ? source.approved_at.strftime("%Y %m.%d") : 0
-      td= source.approved_time ? source.approved_time.strftime("%H:%M:%S") : 0
+      td= source.approved_at.strftime("%Y %m.%d") rescue ""
+      td= source.approved_time.strftime("%H:%M:%S") rescue ""
       td= source.sales_type
       td.numrow
         = number_to_currency source.money_krw
