--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -5,6 +5,8 @@
       "onchange" => "this.form.submit()"
 
 #show_command
+  = link_to t('common.link.except_column'), except_columns_path(class_name: BankTransfer), :class => 'popup'
+  = " | "
   = link_to t('bank_transfers.new.link'), [:new, :bank_transfer]
   = " | "
   = link_to t('bank_transfers.excel.link'), [:excel, :bank_transfers]
