--- a/app/views/main/_this_week.html.slim
+++ b/app/views/main/_this_week.html.slim
@@ -1,28 +1,19 @@
-table#list-table
-  tr
-    - @start_day.to_date.step(@end_day.to_date, 1.day).each do |day|
-      th= l day, format: :compact_long
-  tr
-    - @start_day.to_date.step(@end_day.to_date, 1.day).each do |day|
+div.this_week
+  - @start_day.to_date.step(@end_day.to_date, 1.day).each do |day|
+    div
+      - today_v = @vacations.select {|v| v.in? day}
       - holidays = @holidays.select { |h| h.theday.to_date == day }
-      - if ! holidays.empty? || day.saturday? || day.sunday?
-        td style="background-color: PaleVioletRed;" valign="top"
-          - holidays.each do |h|
-            p= h.dayname
-      - else
-        td valign="top"
-          - today_v = @vacations.select {|v| v.in? day}
-          - unless today_v.empty?
-            - today_v.each do |tv|
-              p= t("used_vacations.vacation") + tv.vacation.user.fullname
-br
-table width="90%" align="center"
-  tr
-    td align="left"
-      '  &laquo;
-      = link_to t("main.index.prevweek"), root_path(page: @page - 1)
-    td align="right"
-      = link_to t("main.index.nextweek"), root_path(page: @page + 1)
-      '  &raquo;
-br
-br
+      - holiday_css = (! holidays.empty? || day.saturday? || day.sunday?) ? 'holiday' : ''
+      h2 class={holiday_css} = l day, format: :compact_long
+      ul
+        - holidays.each do |h|
+          li class={holiday_css} = h.dayname
+        - unless today_v.nil?
+          - today_v.each do |tv|
+            li= t("used_vacations.vacation") + tv.vacation.user.fullname
+  center
+    '  &laquo;
+    = link_to t("main.index.prevweek"), root_path(page: @page - 1)
+    '  | 
+    = link_to t("main.index.nextweek"), root_path(page: @page + 1)
+    '  &raquo;
