--- a/app/views/except_columns/new.html.slim
+++ b/app/views/except_columns/new.html.slim
@@ -3,7 +3,7 @@ h2= t("common.title.#{action_name}")
 = form_tag :except_columns do
   .box
     = hidden_field_tag :class_name, params[:class_name]
-    - class_type.column_names.each do |column|
+    - class_columns.each do |column|
       p
         = label_tag "except[#{column}]", class_type.human_attribute_name(column.to_sym)
         = check_box_tag "except[#{column}]", true, except?(column)
