--- a/app/views/main/_this_week.html.slim
+++ b/app/views/main/_this_week.html.slim
@@ -1,14 +1,13 @@
 div.this_week
   - @start_day.to_date.step(@end_day.to_date, 1.day).each do |day|
-    div
+    div class={today_css day}
       - today_v = @vacations.select {|v| v.in? day}
       - holidays = @holidays.select { |h| h.theday.to_date == day }
-      - holiday_css = (! holidays.empty? || day.saturday? || day.sunday?) ? 'holiday' : ''
-      h2 class={holiday_css} = l day, format: :compact_long
+      h2 class={holiday_css holidays, day} = l day, format: :compact_long
       ul
         - holidays.each do |h|
-          li class={holiday_css} = h.dayname
-        - unless today_v.nil?
+          li class={holiday_css holidays, day} = h.dayname
+        -  unless holiday? holidays, day
           - today_v.each do |tv|
             li= t("used_vacations.vacation") + tv.vacation.user.fullname
   center
