--- a/app/views/hrinfos/show.html.erb
+++ b/app/views/hrinfos/show.html.erb
@@ -1,6 +1,7 @@
 <% title t('.title') %>
 <div id="show_command">
   <% if @user.ingroup?("admin") && ! @hrinfo.retired_on %>
+    <%= link_to t('hrinfos.show.pdf'), [:employment_proof, @hrinfo] %> |
     <%= link_to t('hrinfos.retire.title'), :action => :retire, :id => @hrinfo %> |
     <%= link_to t('common.title.edit'), edit_hrinfo_path(@hrinfo) %> |
   <% end %>
@@ -65,16 +66,6 @@
         <li><%= link_to t('vacations.show.link'), vacation_path(@hrinfo.user) %></li>
       <% end %>
     </ul>
-    <h3><%= t('hrinfos.show.pdf') %></h3>
-    <%= form_tag([:employment_proof, @hrinfo]) do %>
-      <p>
-        <%= label_tag :purpose, t('activerecord.attributes.hrinfo.purpose') %>
-        <%= text_field_tag :purpose %>
-      </p>
-      <p>
-        <%= submit_tag "출력" %>
-      </p>
-    <% end %>
 
 <% end %>
   </div>
