--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -8,7 +8,7 @@
   - unless params[:bank_account_id].blank?
     = link_to t('bank_transactions.verify.link'), verify_bank_transactions_path(bank_account_id: params[:bank_account_id])
     = " | "
-  = link_to t('common.link.except_column'), except_columns_path(class_name: BankTransaction), :class => 'popup'
+  = link_to t('common.link.except_column'), except_columns_path(class_name: BankTransaction), id: :select_except_columns, remote: true
   = " | "
   = link_to t('bank_transactions.new.link'), [:new, :bank_transaction]
   = " | "
