--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -5,7 +5,7 @@
       "onchange" => "this.form.submit()"
 
 #show_command
-  = link_to t('common.link.except_column'), except_columns_path(class_name: BankTransfer), :class => 'popup'
+  = link_to t('common.link.except_column'), except_columns_path(class_name: BankTransfer), id: :select_except_columns, remote: true
   = " | "
   = link_to t('bank_transfers.new.link'), [:new, :bank_transfer]
   = " | "
