add holidays, payrolls and dayworkers test #8902

--- a/app/views/dayworkers/show.html.slim
+++ b/app/views/dayworkers/show.html.slim
@@ -8,7 +8,7 @@
 h2= t('common.title.show')
 
 ul
-  li= Dayworker.human_attribute_name('juminno') + " : " + dayworker.juminno
+  li= Dayworker.human_attribute_name('juminno') + " : " + dayworker.juminno.to_s
 
 div#show_command
   = link_to "주소록 찾기", find_contacts_path(target_class: dayworker.class, target: dayworker), :class => 'popup'
