--- a/app/views/shared/attachments/_detail.html.slim
+++ b/app/views/shared/attachments/_detail.html.slim
@@ -1,5 +1,5 @@
 - attachments = target.attachments
-- unless attachments.nil? && attachments.empty?
+- unless attachments.nil? || attachments.empty?
   - attachment = attachments.first
   #attach
     = link_to image_tag(picture_attachment_path(attachment, :w => "600", :h => "800")), picture_attachment_path(attachment), target: :blank
@@ -10,7 +10,7 @@
         '  ...
         - 0.upto(attachments.count - 1) do |i|
           /= link_to (i+1).to_s, {:at => i}, :id => attachments[i].id, :class => "move-attachment" 
-          span.move-attachment{id=attachments[i].id} :style => 'cursor: hand;' = (i+1).to_s
+          span.move-attachment{id=attachments[i].id} = (i+1).to_s
           '  
 .clear
 - content_for :javascript do
