--- a/app/views/users/_detail.html.slim
+++ b/app/views/users/_detail.html.slim
@@ -1,14 +1,12 @@
 h2= user.name
 
 dl
-  dt= User.human_attribute_name("gmail_account")
-  dd= user.gmail_account
+  dt= User.human_attribute_name("google_account")
+  dd= user.google_account
   dt= User.human_attribute_name("notify_email")
   dd= user.notify_email
   dt= User.human_attribute_name("boxcar_account")
   dd= user.boxcar_account
-  dt= User.human_attribute_name("google_app_account")
-  dd= user.google_app_account
 
 =render "shared/attachments/detail", target: user
 .clear
