--- a/app/views/users/_detail.html.slim
+++ b/app/views/users/_detail.html.slim
@@ -7,6 +7,8 @@ dl
   dd= user.notify_email
   dt= User.human_attribute_name("boxcar_account")
   dd= user.boxcar_account
+  dt= User.human_attribute_name("redmine_account")
+  dd= user.redmine_account
 
 =render "shared/attachments/detail", target: user
 .clear
