should not create new tag if return value of prompt is false

--- a/app/views/except_columns/_form.html.slim
+++ b/app/views/except_columns/_form.html.slim
@@ -29,7 +29,7 @@ javascript:
     e.preventDefault();
 
     name = prompt('저장할 이름을 입력하세요');
-    if(name){
+    if(name && name != 'null'){
       form.find('#new_tag_name').val(name);
       form.submit();
     }
